@@ -1,3 +1,9 @@
+2009-03-24  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	ARI fix: "strerror" rule.
+	* darwin-nat.c (darwin_ptrace): Use safe_strerror.
+	(darwin_stop_inferior, darwin_attach, darwin_detach): Ditto.
+
 2009-03-23  Joel Brobecker  <brobecker@adacore.com>
 
 	* ada-exp.y (get_symbol_field_type): Make sure to resolve typedefs
